doc: signup controller
