# pkg/controllers/authController.go
@@ -19,6 +19,21 @@ type auth struct {
 	Logout http.Handler
 }
 
+// TODO: swaggo 文件看熟，把 request payload 和 response 會有什麼都寫清楚
+// signup godoc
+// @Summary 	 Create account
+// @Description  Create account by email, name, password
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Param		 email 	  body string true "user email"
+// @Param		 name 	  body string true "user name"
+// @Param		 password body string true "user password"
+// @Success      200      {object}  structs.ResponseBody{data=models.User}
+// @Failure      400      {object}  structs.ResponseBody
+// @Failure      404      {object}  structs.ResponseBody
+// @Failure      500      {object}  structs.ResponseBody
+// @Router       /signup [post]
 // TODO: 將 Request Body 的 Struct 和 Model 的 Struct 解耦來更彈性一點，以及控制資料的可見度
 func signup(w http.ResponseWriter, r *http.Request) {
 	user := &models.User{}
